--- a/css/animation-logo.css.css
+++ b/css/animation-logo.css.css
@@ -1,28 +1,31 @@
 img {
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
   animation-name: linkedin-logo;
-  animation-duration: 5s;
-  animation-iteration-count: infinite;
-  animation-play-state: running;
-  transform-origin: top;
-}
-
-.running:hover {
-  animation-name: linkedin-logo;
-  animation-timing-function: ease-in;
 }
 
 @keyframes linkedin-logo {
   0% {
-    transform: translateY(0);
+    transform: rotate(0deg);
   }
   50% {
-    transform: translateY(90px);
+    transform: rotate(180deg);
   }
   100% {
-    transform: translateY(0)};
+    transform: rotate(360deg);
+  }
 }
+img:hover {
+  animation-name: linkedin-logo;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-play-state: running;
+ 
+}
+
+
+
+
 
 
 
